[package]
name = "data_sys"
version = "0.1.0"
authors = ["CyberWolf <borel.loic.37@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = "1.0.123"
quote = "1.0"
derive_map = { path = "../derive_map"}
syn = {version="1.0.57",features=["full","fold"]}

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]

[lib]
proc-macro = true