[package]
name = "derive_map"
version = "0.1.0"
authors = ["CyberWolf37 <borel.loic.37@gmail.com>"]
edition = "2018"

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
log = "0.4"
serde = "1.0.123"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]